<resources>
    <string name="app_name">SDK Demo</string>
    <string name="button_switch_connection_state_connect">Connect</string>
    <string name="button_switch_connection_state_disconnect">Disconnect</string>
    <string name="button_switch_connection_state_on_connecting">Connecting</string>
    <string name="button_switch_connection_state_on_disconnecting">Disconnecting</string>
    <string name="button_data_request_start_data_request">Request data</string>
    <string name="button_data_request_stop_data_request">Stop request</string>
    <string name="button_command_state_start">Start</string>
    <string name="button_command_State_pause">Pause</string>
    <string name="button_command_preset">Set preset</string>
    <string name="button_print">Print</string>
    <string name="button_exit_header">Exit</string>
    <string name="button_select_wifi">Wi-Fi</string>
    <string name="button_select_bluetooth">Bluetooth</string>
    <string name="button_select_bluetooth_from_json">BT From JSON</string>
    <string name="text_header_qty">Gross Qty (data req)</string>
    <string name="text_header_flow_rate">Flow Rate (data req)</string>
    <string name="text_header_preset">Gross Preset (data req)</string>
    <string name="text_header_switch_status">Switch state</string>
    <string name="text_header_flow_state">Flow state</string>
    <string name="text_header_device_state">Device state</string>
    <string name="text_header_device_connection_state">Device connection state</string>
    <string name="text_header_network_connection_State">Network state</string>
    <string name="text_header_network_type">Network type</string>
    <string name="text_flow_state_on">Flow is on</string>
    <string name="text_flow_state_off">Flow is off</string>
    <string name="text_state_unknown">-</string>
    <string name="text_data_unknown">-</string>
    <string name="text_unknown">Unknown</string>
    <string name="text_network_type_wifi">Wifi</string>
    <string name="text_network_type_bluetooth">Bluetooth</string>
    <string name="wi_fi_ip_address">Wi-Fi IP Address:</string>
    <string name="ip_address">IP Address</string>
    <string name="ip_192_168_1_30">192.168.1.30</string>
    <string name="wi_fi_ip_port">Wi-Fi IP Port:</string>
    <string name="num_10001">10001</string>
    <string name="bluetooth_paired_devices_click_to_select">Bluetooth Paired Devices - Click to select ...................................................................................................................................................................................</string>
    <string name="paired_devices_list">Paired Devices List</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="ok">OK</string>
    <string name="bluetooth_device">Bluetooth Device:</string>
    <string name="network_address">Network address</string>
    <string name="ip_port">IP port</string>
    <string name="bluetooth_device_address">Bluetooth device address</string>

    <string name="lcp_node_address_label">LCP Node Address:</string>
    <string name="lcp_node_address">250</string>
</resources>
